# RGSU

./: .env  .gitignore  README.md  TelegramBot.drawio  database.py  pyproject.toml  schedule.db  uwwuuu.py
